@@ -8,6 +8,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+2016-06-02 ruhllatio
+	Add: JSON Response formatting
 2016-06-01 ruhllatio
 	Mrg: PR - Feature media #2153
 	Fix: Regex error in SP from #2153
